src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>HYPERLINK(&quot;http://www.VeryImportantWebsite.com&quot;, &quot;Very Important Website&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_First_Opportunity_Created__c</fullName>
        <label>Date First Opportunity Created</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>My_Date__c</fullName>
        <label>My Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>OldestAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Oldest Accounts</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_is_Numeric</fullName>
        <active>true</active>
        <description>Validates that the Account Number is numeric if not blank</description>
        <errorConditionFormula>AND (
     ISCHANGED(AccountNumber),
     NOT (ISBLANK(AccountNumber)),
     NOT (ISNUMBER(AccountNumber))
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number is not numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_must_be_in_the_Current_Year</fullName>
        <active>true</active>
        <description>Validates that a custom date field contains a date within the current year.</description>
        <errorConditionFormula>YEAR ( My_Date__c ) &lt;&gt; YEAR ( TODAY() )</errorConditionFormula>
        <errorDisplayField>My_Date__c</errorDisplayField>
        <errorMessage>Date must be in the current year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Billing_Country</fullName>
        <active>true</active>
        <description>Validates that the account Billing Country is  a valid ISO 3166 two-letter code.</description>
        <errorConditionFormula>AND(
ISCHANGED(BillingCountry),
OR(
LEN(BillingCountry) = 1,
NOT(
CONTAINS(
&quot;AF:AX:AL:DZ:AS:AD:AO:AI:AQ:AG:AR:AM:&quot; &amp;
&quot;AW:AU:AZ:BS:BH:BD:BB:BY:BE:BZ:BJ:BM:BT:BO:&quot; &amp;
&quot;BA:BW:BV:BR:IO:BN:BG:BF:BI:KH:CM:CA:CV:KY:&quot; &amp;
&quot;CF:TD:CL:CN:CX:CC:CO:KM:CG:CD:CK:CR:CI:HR:&quot; &amp;
&quot;CU:CY:CZ:DK:DJ:DM:DO:EC:EG:SV:GQ:ER:EE:ET:FK:&quot; &amp;
&quot;FO:FJ:FI:FR:GF:PF:TF:GA:GM:GE:DE:GH:GI:GR:GL:&quot; &amp;
&quot;GD:GP:GU:GT:GG:GN:GW:GY:HT:HM:VA:HN:HK:HU:&quot; &amp;
&quot;IS:IN:ID:IR:IQ:IE:IM:IL:IT:JM:JP:JE:JO:KZ:KE:KI:&quot; &amp;
&quot;KP:KR:KW:KG:LA:LV:LB:LS:LR:LY:LI:LT:LU:MO:MK:&quot; &amp;
&quot;MG:MW:MY:MV:ML:MT:MH:MQ:MR:MU:YT:MX:FM:MD:MC:&quot; &amp;
&quot;MC:MN:ME:MS:MA:MZ:MM:MA:NR:NP:NL:AN:NC:NZ:NI:&quot; &amp;
&quot;NE:NG:NU:NF:MP:NO:OM:PK:PW:PS:PA:PG:PY:PE:PH:&quot; &amp;
&quot;PN:PL:PT:PR:QA:RE:RO:RU:RW:SH:KN:LC:PM:VC:WS:&quot; &amp;
&quot;SM:ST:SA:SN:RS:SC:SL:SG:SK:SI:SB:SO:ZA:GS:ES:&quot; &amp;
&quot;LK:SD:SR:SJ:SZ:SE:CH:SY:TW:TJ:TZ:TH:TL:TG:TK:&quot; &amp;
&quot;TO:TT:TN:TR:TM:TC:TV:UG:UA:AE:GB:US:UM:UY:UZ:&quot; &amp;
&quot;VU:VE:VN:VG:VI:WF:EH:YE:ZM:ZW&quot;,
BillingCountry)))
)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>A valid two-letter country code is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Website_Extension</fullName>
        <active>true</active>
        <description>Validates a custom field called Web Site to ensure its last four characters are in an an explicit set of valid website extensions.</description>
        <errorConditionFormula>AND (
        NOT(ISBLANK(Web_Site__c)),
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.COM&quot;,
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.com&quot;,
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.ORG&quot;,
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.org&quot;,
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.NET&quot;,
        RIGHT ( Web_Site__c, 4) &lt;&gt; &quot;.net&quot;
    )</errorConditionFormula>
        <errorDisplayField>Web_Site__c</errorDisplayField>
        <errorMessage>Web Site must have an extension of .com, .org, or .net.</errorMessage>
    </validationRules>
</CustomObject>